# alldjango.com

./: .env  .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy-to-caprover.yml  deploy.yml
content/: gitego.md  index.md  robots.txt  stickers.md
content/articles/: definitive-guide-to-deploying-production-scale-django-on-heroku.md  developer-marketing.md  django-inclusion-tags-can-modify-page-context.md  essential-django-packages.md  index.md  optimize-the-django-orm.md  python-packaging-2023-comparison.md  searching-within-area-geodjango-postgis.md  serve-multiple-django-sites-from-one-cloud-server.md
content/tips/: add-query-string-template-tag.md  audit-models.md  django-wagtail-reversion-magic.md  index.md  unique-obfuscated-urls-django.md  url-slugs.md
data/: index.json
static/css/: hover-stickers.css  spacing.css  stickers-v1.css  stickers-v2.css  stickers.css  styles.css
static/js/: dork.js  gitego.js
templates/: _contents.html  _hello.html  _hello.md  _related_contents.html  base.html  gitego.html  stickers-v1.html  stickers.html
templates/gitego/: _header.html  _repo.html  _user-detail.html  _user.html  base.html  index.html
templates/gitego/user/: *.html
templates/gitego/user/*/: *.html
templatetags/: gitego.py
