[tool.poetry]
name = "alldjango.com"
version = "0.1.0"
description = ""
authors = ["adamghill <adamghill@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coltrane-web = "<1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
