[tool.poetry]
name = "alldjango.com"
version = "0.1.0"
description = ""
authors = ["adamghill <adamghill@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coltrane = { version = "<1", extras = ["mistune"] }

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
r = { cmd = "coltrane play", help = "Start the dev server" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
