[tool.poetry]
name = "alldjango.com"
version = "0.1.0"
description = ""
authors = ["adamghill <adamghill@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coltrane = { version = "<1", extras = ["mistune"] }
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
httpx = "^0.25.1"
glom = "^23.4.0"

[tool.poetry.dev-dependencies]

[tool.ruff]
src = ["src/transformd"]
exclude = []
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
  # Conflicts with formatter
  "ISC001"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.isort]
known-first-party = [
  "transformd",
  "tests",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.poe.tasks]
r = { cmd = "coltrane play", help = "Start the dev server" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
